# boj-client

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  crate-publish.yml  mcp-release.yml  nightly-contract.yml  release-publish.yml
docs/api-manual/: 01-overview.md  02-request.md  03-response.md  04-examples.md  README.md  appendix-db-list.md  appendix-message-codes.md
docs/design/: api-client-versioning.md  mcp-server.md  unit-test-policy.md
examples/: request_example.rs
mcp-server/: Cargo.toml  README.md
mcp-server/src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  mapping.rs  protocol.rs  retry.rs  tools.rs
npm/boj-mcp-server/: README.md  biome.json  package.json
npm/boj-mcp-server/lib/: checksum.cjs  install.cjs  lock.cjs  main.cjs  platform.cjs  release.cjs
npm/boj-mcp-server/test/integration/: launcher.test.cjs
npm/boj-mcp-server/test/unit/: checksum.test.cjs  main.test.cjs  platform.test.cjs  release.test.cjs
src/: error.rs  lib.rs
src/catalog/: mod.rs
src/client/: core.rs  http.rs  mod.rs  response.rs
src/decode/: common.rs  mod.rs
src/decode/csv/: code.rs  layer.rs  metadata.rs  mod.rs  payload.rs
src/decode/json/: code.rs  layer.rs  metadata.rs  mod.rs
src/model/: mod.rs  response.rs
src/query/: code.rs  layer.rs  metadata.rs  mod.rs  options.rs  validation.rs
src/transport/: mod.rs  reqwest.rs  types.rs
tests/: .snapshot_regression.rs.pending-snap  catalog_sync.rs  client_behavior.rs  contract_nightly.rs  csv_decoder.rs  json_decoder.rs  snapshot_regression.rs  url_building.rs
tests/common/: mod.rs
tests/fixtures/: README.md  csv_error_json_payload.json  csv_legacy_code_api.csv  csv_success_en_utf8.csv  csv_success_jp_shiftjis.csv  csv_success_jp_utf8_bom.csv  csv_success_jp_utf8_no_bom.csv  csv_success_metadata_en_utf8.csv  json_error_400_invalid_db.json  json_error_500_internal.json  json_legacy_code_api.json  json_success_code_api.json  json_success_metadata_api.json  json_success_no_data.json
