[package]
name = "boj-client"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Rust client for the Bank of Japan time-series statistics API"
repository = "https://github.com/explorrrr/boj-client"
include = [
    "/src/**",
    "/Cargo.toml",
    "/README.md",
    "/README.en.md",
    "/LICENSE",
]

[workspace]
members = ["mcp-server"]
resolver = "2"

[dependencies]
csv = "1.4.0"
encoding_rs = "0.8.35"
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "gzip", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
urlencoding = "2.1.3"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[package.metadata.release]
allow-branch = ["master"]
consolidate-commits = true
pre-release-commit-message = "chore(release): {{version}}"
tag-name = "v{{version}}"
tag-message = "Release {{crate_name}} {{version}}"
publish = false
push = false
