[package]
name = "boj-mcp-server"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "MCP server for the Bank of Japan time-series statistics API"
publish = false

[dependencies]
boj-client = { path = ".." }
clap = { version = "4.5.32", features = ["derive", "env"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
rmcp = { version = "0.16.0", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
rmcp = { version = "0.16.0", default-features = false, features = ["client", "macros", "transport-io"] }
